	reference is displayed by debugging functions such as traceback(),
	browser(), recover(), and dump.frames(), and is stored as an
	attribute on each element returned by sys.calls(). [Experimental]

    o	quantile.default() now disallows factors (wish of PR#13631)
	and its help documents what numeric-like properties its input
	need to have to work correctly.


DEPRECATED & DEFUNCT

    o	Bundles of packages are deprecated.  See 'Writing R
	Extensions' for the steps needed to unbundle a bundle.


UTILITIES

    o	There is some makefile support for adding/updating translations
	in packages: see po/README and 'Writing R Extensions'.


BUG FIXES



	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.0 patched


NEW FEATURES

    o	New function anyDuplicated(x) returns 0 (= FALSE) or the index
	of the first duplicated entry of x.

    o	matplot(), matlines() and matpoints() now also obey a 'lend'
	argument, determining line end styles. (Wish of PR#13619).

    o	bw.SJ(), bw.bcv() and bw.ucv() now gain an optional 'tol'
	argument allowing more accurate estimates.

    o	new.packages() no longer regards packages with the same name
	as a member of an installed bundle as 'new' (this is now
	consistent with the dependency checks in install.packages()).

	It no longer reports on partially installed bundles (since
	members can be updated individually if a bundle is unbundled).

    o	old.packages() and hence updates.packages() will look for
	updates to members of package bundles before updates to the
	whole bundle: this allow bundles to be split and installations
	updated.


DEPRECATED & DEFUNCT

    o	print.atomic() (defunct since 1.9.0) has been removed since it
	caused confusion for an S4 class union of that name.


BUG FIXES

    o	The ... argument was not handled properly when ... was found